--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,85 @@
-body {
+$square-size: 100px;
+$square-gap: 1px;
+$calendar-width: 7*$square-size+ 6*$square-gap;
+
+@mixin date-box ($size) {
+  width: $size;
+  height: $size;
+  box-sizing: border-box;
+  border: 1px solid black;
+  background-color: #eee;
+  cursor: pointer;
+}
+
+.body {
   margin: 0;
 }
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: $calendar-width;
+  gap: $square-gap;
+  margin: 30px auto 0;
+
+  // кількість видимих днів місяця
+  &--month-length {
+    @for $i from 1 through 31 {
+      &--#{$i} {
+        :nth-child(n+#{$i+1}) {
+          visibility: hidden;
+        }
+      }
+    }
+  }
+
+  // на який день тижня припадає перший день місяця
+  &--start-day {
+    $days:(mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6, sun: 7);
+     
+    @each $first, $day in $days {
+      &--#{$first} {
+        :nth-child(1) {
+          margin-left: ($day - 1) * ($square-size + $square-gap);
+        }
+      }
+    }
+  }
+
+  // комірка  дати
+  &__day {
+    display: flex;
+    @include date-box ($square-size);
+    transition: transform 0.5s;
+
+    &:hover {
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i}):before {
+        content: "#{$i}";
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+        text-align: center;
+        line-height: 100px;
+        width: 100%;
+      }
+    }
+  }
+}
+
+// &--month-length {
+//   @for $i from 28 through 31 {
+//     &--#{$i}{
+//       :nth-child(-n+#{$i}) {
+//         @include date-box ($square-size);
+//         transition: transform 0.5s;
+//         &:hover {
+//           background-color: pink;
+//           transform: translateY(-20px);
+//         }
+//       }
+//     }
+//   }
+// }
