--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
-$square-size: 100px;
-$square-gap: 1px;
+$square-size: 200px;
+$square-gap: 3px;
 $calendar-width: 7*$square-size+ 6*$square-gap;
 
 @mixin date-box ($size) {
@@ -62,7 +62,7 @@ $calendar-width: 7*$square-size+ 6*$square-gap;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 30px;
         text-align: center;
-        line-height: 100px;
+        line-height: $square-size;
         width: 100%;
       }
     }
